# F1-report

./: README.md  pyproject.toml  requirements.txt
src/report/: f1_report.py
src/report/static/: style.css
src/report/templates/: base.html  drivers.html  report.html
src/tests/: conftest.py  test_routes.py
