[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "f1_report_qualification"
version = "0.0.2"
authors = [
  { name="Dmytro Hotsul", email="Dimagotsul@gmail.com" },
]
description = "Package for creating qualification report F1"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"